# dealing-with-a-death-in-scotland

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
appropriation/: index.html
banks/: index.html
basics/: index.html
companies/: index.html
confirmation/: index.html
docs/: appropriation.md  banks.md  basics.md  companies.md  iht.md  index.md  inventory.md  iov.md  irish.md  plan.md  tax_return.md
iht/: index.html
inventory/: index.html
iov/: index.html
irish/: index.html
plan/: index.html
search/: search_index.json
tax_return/: index.html
