[project]
name = "dealing-with-a-death-in-scotland"
version = "0.1.0"
description = ""
authors = [
    {name = "tony-stone",email = "tony-stone@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)"
]

[tool.poetry]
package-mode = false
